# dfhack-23a

./: .gitmodules  CMakeLists.txt  dfhack.init-example  dfhack_loader.cpp
patches/bugs/: artifact-bugs.dif  biome-bugs.dif  campfire-bugs.dif  job-bugs.dif  military-bugs.dif  misc-bugs.dif  noble-bugs.dif  path-bugs.dif  thought-bugs.dif  trade-bugs.dif  vermin-bugs.dif  zcoord-bugs.dif
patches/dfhack/: dfhack-autoload.dif  dfhack-patches.dif  save-patches.dif
patches/enhancements/: always-show-history.dif  artifact-always-drop.dif  artifact-nervous-immediate.dif  bigger-caravans.dif  more-artifacts.dif  more-coal-gems.dif  never-too-deep.dif  semi-megabeast-attacks.dif  show-history.diff  subterranean-animal-diversity.dif  vsync_off.dif
plugins/: Brushes.h  CMakeLists.txt  advtools.cpp  assign_icon.cpp  autodump.cpp  autolabor.cpp  better_stocks.cpp  catsplosion.cpp  changeitem.cpp  changelayer.cpp  changevein.cpp  cleanconst.cpp  cleaners.cpp  cleanowned.cpp  container_names.cpp  createitem.cpp  df3d.cpp  dig.cpp  digFlood.cpp  drybuckets.cpp  fastdwarf.cpp  feature.cpp  fixveins.cpp  flows.cpp  follow.cpp  forceequip.cpp  getplants.cpp  infiniteSky.cpp  initflags.cpp  lever_links.cpp  liquids.cpp  manipulator.cpp  melt_chasm.cpp  mode.cpp  more_jobs.cpp  petcapRemover.cpp  plants.cpp  power-meter.cpp  probe.cpp  prospector.cpp  (+21 more)
plugins/diggingInvaders/: assignJob.cpp  diggingInvaders.cpp  edgeCost.cpp
plugins/ruby/: CMakeLists.txt  codegen.pl  ruby.cpp
scripts/: region-pops.lua
scripts/fix/: stable-temp.lua
